# ltms

./: .gitignore  BRIEFING.md  CHANGES.md  LICENSE  NOTICE  PLAN.md  README.md  STUDY-NOTES.md  pyproject.toml
.github/workflows/: ci.yml
companion/: README.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  ch08.md  ch09.md  ch10.md  ch11.md  ch12.md  ch13.md  ch14.md  ch15.md  ch16.md  ch17.md  ch18.md
docs/: .gitignore  Gemfile  _config.yml  architecture.md  examples.md  exercises.md  getting-started.md  index.md
docs/companion/: README.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  ch08.md  ch09.md  ch10.md  ch11.md  ch12.md  ch13.md  ch14.md  ch15.md  ch16.md  ch17.md  ch18.md
examples/: belief_revision_ltre.py  coloring_dds.py  family_tre.py  run_kb.py
examples/kb/: belief_revision.kb  completeness.kb  diagnosis.kb  family.kb  modus_tollens.kb  taxonomy.kb
exercises/: README.md
exercises/ch03/: README.md
exercises/ch04/: README.md  solutions.py
exercises/ch05/: README.md
exercises/ch06/: README.md  solutions.py
exercises/ch07/: README.md  solutions.py
exercises/ch08/: README.md  solutions.py
exercises/ch09/: README.md  solutions.py
exercises/ch10/: README.md  solutions.py
tests/: test_advanced.py  test_cltms.py  test_core_assumptions.py  test_core_bcp.py  test_core_properties.py  test_differential_sat.py  test_dsl.py  test_examples.py  test_exercises.py  test_explain.py  test_jtms.py  test_jtre.py  test_kb_files.py  test_ltre.py  test_normalize.py  test_terms.py  test_tre.py  test_unify.py  test_unify_properties.py  test_watched.py
(+36 files in other folders)
